syntax = "proto3";

option csharp_namespace= "PetShop.GRPC";

package category;

message GetAllCategoriesRequest{
    string name = 1; 
    string description = 2; 
    string status = 3; 
}

message GetAllCategoriesResponse {
  repeated CategoryResponse category = 1;
}

message CreateCategoryRequest {
    string Id = 1;
    string Name = 2;
    string Description = 3;
    string Status = 4;
}

message UpdateCategoryRequest {
    string id = 1;
    string name = 2;
    string description = 3;
}

message DeleteCategoryRequest {
    string id = 1;
}

message CategoryResponse {
    string Id = 1;
    string Name = 2;
    string Description = 3;
    string Status = 4;
}

service CategoryServices {
    rpc GetAllCategories(GetAllCategoriesRequest) returns (GetAllCategoriesResponse) {}
    rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse) {}
    rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse) {}
    rpc DeleteCategory(DeleteCategoryRequest) returns (CategoryResponse) {}
}